--- a/css/styles.css
+++ b/css/styles.css
@@ -69,23 +69,41 @@ body {
   min-height: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  max-width: 1200px;
   justify-items: center;
+}
+
+dialog {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.hide {
+  display: none;
 }
 
 .wrapper {
   display: grid;
   width: 100%;
   justify-content: center;
+  justify-items: center;
+  height: -moz-min-content;
+  height: min-content;
 }
 
 .navigation, footer {
   padding: 16px;
-  background-image: url(../images/paper1.svg);
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-image: url("../images/paper1.svg");
   background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
   text-align: center;
+  width: 100%;
   filter: drop-shadow(0px 0px 11.7px rgba(0, 0, 0, 0.25));
 }
 .navigation p, footer p {
@@ -95,9 +113,14 @@ body {
 
 .canvas {
   min-height: 200px;
+  display: grid;
+  gap: 8px;
+  justify-content: center;
+  align-content: center;
+  margin: 24px 0px;
 }
 
-.keyboard {
+.showkeyboard {
   padding: 16px;
   font-family: "Knewave", system-ui;
   border: 1pt solid rgb(33, 33, 41);
@@ -121,18 +144,21 @@ body {
   display: grid;
   font-family: "Knewave", system-ui;
   border: none;
-  background-image: url(../images/paper-letter.svg);
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-image: url("../images/paper-letter.svg");
   background-size: 100%;
-  padding: 16px;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 8px;
   filter: drop-shadow(0px 0px 1.5px rgba(0, 0, 0, 0.25));
   height: -moz-fit-content;
   height: fit-content;
 }
 
 .enabled:hover {
-  background-image: url(../images/paper-letter-hovered.svg);
+  background-image: url("../images/paper-letter-hovered.svg");
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 button {
@@ -142,12 +168,101 @@ button {
 }
 
 .selected {
-  background-image: url(../images/paper-letter.svg);
+  background-image: url("../images/Circled.svg");
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.selected {
-  background-image: url(../images/Circled.svg);
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: 100%;
+#hangman, #text {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
+
+#hangmanimage {
+  max-height: 200px;
+  width: auto;
+}
+
+.letter, .wordletter {
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 16px;
+  margin: 0px 8px;
+  color: rgb(33, 33, 41);
+  height: 60px;
+  width: 40px;
+}
+
+.wordletter {
+  border-bottom: 2pt solid rgb(33, 33, 41);
+}
+
+.text_container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.unguessed {
+  display: none;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  display: grid;
+  border-radius: 8pt;
+  gap: 16px;
+  margin: 15% auto;
+  padding: 32px;
+  border: 1px solid #888;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.try-again {
+  display: grid;
+  padding: 8px;
+  border: 1pt solid rgb(33, 33, 41);
+  border-radius: 4pt;
+}
+
+.try-again:hover {
+  background-color: rgb(223, 236, 255);
+}
+
+.fade-in {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 0.3s;
+}
+
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+#start-game {
+  background-color: white;
+  border-radius: 4pt;
+  padding: 8px;
+  border: 1pt solid rgb(33, 33, 41);
+  font-size: 1.3rem;
+  grid-column: 1/span 2;
+}
+
+#start-game:hover {
+  background-color: #bbe0ff;
+}
+
+#text {
+  display: grid;
+  gap: 16px;
 }/*# sourceMappingURL=styles.css.map */
