--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,102 +7,206 @@ $primary-color: rgb(30, 43, 185);
 $background-color: rgb(229, 233, 243);
 $text-color: rgb(33, 33, 41);
 
+// Mixin for background settings
+@mixin background-settings($image-url, $size: 100%, $position: center, $repeat: no-repeat) {
+  background-image: url($image-url);
+  background-size: $size;
+  background-position: $position;
+  background-repeat: $repeat;
+}
 
 html{
-    height: 100%;
-    background-color: #ffffff;
-    opacity: 1;
-    background-image:  linear-gradient(#bbe0ff 0.9px, transparent 0.9px), linear-gradient(to right, #bbe0ff 0.9px, #ffffff 0.9px);
-    background-size: 18px 18px;
-    display: grid;
-    justify-items: center;
-    font-size: 14pt;
-    font-family: "Indie Flower", cursive;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 1;
+  background-image:  linear-gradient(#bbe0ff 0.9px, transparent 0.9px), linear-gradient(to right, #bbe0ff 0.9px, #ffffff 0.9px);
+  background-size: 18px 18px;
+  display: grid;
+  justify-items: center;
+  font-size: 14pt;
+  font-family: "Indie Flower", cursive;
 }
-body{
-    padding: 24px 16px;
-    width: 100%;
-    max-width: 1200px;
-    min-height: 100%;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    max-width:1200px;
-    justify-items: center;
-}
-//Classes
 
+body{
+  padding: 24px 16px;
+  width: 100%;
+  max-width: 1200px;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  justify-items: center;
+}
+
+dialog{
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+//Classes
+.hide { display: none; }
 
 .wrapper{
-    display: grid;
-    width: 100%;
-    justify-content: center;
+  display: grid;
+  width: 100%;
+  justify-content: center;
+  justify-items: center;
+  height: min-content;
 }
+
 .navigation, footer{
-    padding: 16px;
-    background-image: url(../images/paper1.svg);
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: 100%; 
-    text-align: center;
-    filter: drop-shadow(0px 0px 11.7px rgba(0, 0, 0, 0.25));
-    p{
-        font-size: 1.2rem;
-        font-weight: bold;
+  padding: 16px;
+  @include background-settings('../images/paper1.svg');
+  text-align: center;
+  width: 100%;
+  filter: drop-shadow(0px 0px 11.7px rgba(0, 0, 0, 0.25));
 
-    }
+  p{
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
 }
+
 .canvas{
-    min-height: 200px;
+  min-height: 200px;
+  display: grid;
+  gap: 8px;
+  justify-content: center;
+  align-content: center;
+  margin: 24px 0px;
 }
 
-.keyboard{
-    padding: 16px;
-    font-family: "Knewave", system-ui;
-    border: 1pt solid $text-color;
-    border-radius: 8pt;
-    display: grid;
-    gap: 0px;
-    max-width: 600px;
-    justify-content: center;
-    margin-bottom: 24px;
-    height: fit-content;
+.showkeyboard{
+  padding: 16px;
+  font-family: "Knewave", system-ui;
+  border: 1pt solid $text-color;
+  border-radius: 8pt;
+  display: grid;
+  gap: 0px;
+  max-width: 600px;
+  justify-content: center;
+  margin-bottom: 24px;
+  height: fit-content;
 }
 
 .row{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .button-container{
-    display: grid;
-    font-family: "Knewave", system-ui;
-    border: none;
-    background-image: url(../images/paper-letter.svg);
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: 100%; 
-    padding: 16px;
-    filter: drop-shadow(0px 0px 1.5px rgba(0, 0, 0, 0.25));
-    height: fit-content;
+  display: grid;
+  font-family: "Knewave", system-ui;
+  border: none;
+  @include background-settings('../images/paper-letter.svg');
+  padding: 8px;
+  filter: drop-shadow(0px 0px 1.5px rgba(0, 0, 0, 0.25));
+  height: fit-content;
 }
+
 .enabled:hover{
-    background-image: url(../images/paper-letter-hovered.svg);
+  @include background-settings('../images/paper-letter-hovered.svg');
 }
+
 button{
-    background-color: rgba(255, 255, 255, 0);
-    border: none;
-    padding: 8px;
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  padding: 8px;
 }
-.selected{
-    background-image: url(../images/paper-letter.svg);
-}
-
 
 .selected{
-    background-image: url(../images/Circled.svg);
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: 100%; 
+  @include background-settings('../images/Circled.svg');
 }
 
+#hangman, #text{
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
+
+#hangmanimage{
+  max-height: 200px;
+  width: auto;
+}
+
+.letter, .wordletter{
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 16px;
+  margin: 0px 8px;
+  color: $text-color;
+  height: 60px;
+  width: 40px;
+}
+
+.wordletter{
+  border-bottom: 2pt solid $text-color;
+}
+
+.text_container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.unguessed{ display: none; }
+
+.modal-content {
+  background-color: #fefefe;
+  display: grid;
+  border-radius: 8pt;
+  gap: 16px;
+  margin: 15% auto;
+  padding: 32px;
+  border: 1px solid #888;
+  width: fit-content;
+}
+
+.try-again{
+  display: grid;
+  padding: 8px;
+  border: 1pt solid $text-color;
+  border-radius: 4pt;
+}
+
+.try-again:hover{
+  background-color: rgb(223, 236, 255);
+}
+
+.fade-in {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: .3s;
+}
+
+@keyframes fadeInOpacity {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+#start-game{
+  background-color: white;
+  border-radius: 4pt;
+  padding: 8px;
+  border: 1pt solid $text-color;
+  font-size: 1.3rem;
+  grid-column: 1 /span 2;
+}
+
+#start-game:hover{
+  background-color: #bbe0ff;
+}
+
+#text{
+  display: grid;
+  gap: 16px;
+}
